fixed contrast issues with home page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,7 @@ a {
 
 .content-title {
     text-align: center;
-    color: #d42a00;
+    color: #ff714d;
     font-family: "Raleway", Helvetica, sans-serif;
 }
 
@@ -118,7 +118,7 @@ h4 {
     margin: auto;
     text-align: center;
     border: 5px solid #ffc362;
-    color: #f2542d;
+    color: #ff714d;
     font-family: "Abel", Helvetica, sans-serif;
 }
 
@@ -148,7 +148,7 @@ h4 {
     margin: auto;
     text-align: center;
     border: 5px solid #ffc362;
-    color: #f2542d;
+    color: #ff714d;
     font-family: "Abel", Helvetica, sans-serif;
 }
 
@@ -162,7 +162,7 @@ h4 {
     margin: auto;
     text-align: center;
     border: 5px solid #ffc362;
-    color: #f2542d;
+    color: #ff714d;
     font-family: "Abel", Helvetica, sans-serif;
 }
 
